--- a/main.css
+++ b/main.css
@@ -21,12 +21,18 @@ body {
   width: 100%;
   
 }
-.site-header {
+
+
+.header {
   background-image: linear-gradient(to bottom, #444444, rgba(255,0,0,0));
-
-  }
-
-
+  color: whitesmoke;
+}
+.header a{
+  color: whitesmoke;
+}
+.header a:hover{
+  
+}
 
 .site-header a {
   color: whitesmoke;
@@ -57,6 +63,10 @@ body {
 .featurette-divider {
     margin: 5rem 0; /* Space out the Bootstrap <hr> more */
   }
+.featurette-divider-mosaic {
+  margin-bottom: 0rem ; 
+  margin-top: 5rem;
+}
   
   /* Thin out the marketing headings */
   .featurette-heading {
@@ -77,6 +87,11 @@ body {
 
 hr {
   color: #e0ca3c;
+}
+
+
+.featurette-mosaic{
+  background-image: linear-gradient(to bottom, #0161C6, rgba(255,0,0,0));;
 }
 
 /* --------------------lists------------------------- */  
@@ -194,7 +209,28 @@ ul {
 }
 
 
+/* - - - - - Mosaic - - - - -*/
 
+
+
+.row-featurette-mosaic img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 180px;
+}
+
+
+/* Zoom In #1 */
+.hover01 figure img {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover01 figure:hover img {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
 
 
 
