--- a/main.css
+++ b/main.css
@@ -28,6 +28,12 @@ body,html {
   width:100%;
   
 }
+.container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+
+overflow: hidden;
+}
 
 .navbar {
   width: 100%;
@@ -39,6 +45,7 @@ body,html {
   color: whitesmoke;
   padding-left: 1rem;
   padding-right: 1rem;
+  width: 100%;
 }
 .header a{
   color: whitesmoke;
