--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -87,10 +87,10 @@
             </div>
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider" id="Work-experiences">
 
         <div class="text-center flex-column">
-            <h1 class="text-center" id="Work-experiences">
+            <h1 class="text-center">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
                         class="bi bi-tools icon-blue" viewBox="0 0 16 16">
                         <path
@@ -107,7 +107,7 @@
         <hr class="featurette-divider">
 
         <div class="row  p-lg-5">
-            <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+            <div class="col-md-9 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
                 <h3>Data processing for Gorosti society. <span class="text-muted">Sociedad Gorosti. (2010-2012)
                     </span></h3>
                 <p class="lead m-3 pb-3  text-start">
@@ -126,7 +126,7 @@
                     this the late motiv of my work.
                 </p>
             </div>
-            <div class="col-md-5  p-3 p-md-6 text-center">
+            <div class="col-md-3  p-3 p-md-6 d-flex text-center align-items-center justify-content-center">
                 <a href="https://sites.google.com/view/gorosti/la-sociedad">
                     <img src="/img/gorosti_con_textos_resize.gif" class="responsive" alt="Gorosti">
                 </a>
@@ -136,7 +136,7 @@
         <hr class="featurette-divider">
 
         <div class="row  p-lg-5">
-            <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+            <div class="col-md-9  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
                 <h3>Final degree proyect <span class="text-muted"> VISCOFAN S.A. (2014)
                     </span> </h3>
                 <p class="lead m-3 pb-3  text-start">
@@ -148,7 +148,7 @@
                     Improvements in lighting will be analyzed and proposed, focusing on the most conflictive points.
                 </p>
             </div>
-            <div class="col-md-5  p-3 p-md-6 text-center">
+            <div class="col-md-3  p-3 p-md-6 d-flex align-items-center justify-content-center">
                 <a href="https://www.isri.com/">
                     <img src="/img/viscofan.png" class="responsive" alt="ISRI">
                 </a>
@@ -158,7 +158,7 @@
         <hr class="featurette-divider">
 
         <div class="row  p-lg-5">
-            <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+            <div class="col-md-9 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
                 <h3>Quality control technician. <span class="text-muted"> Wisco Española, S.A (2014-2015)
                     </span> </h3>
                 <p class="lead m-3 pb-3  text-start">
@@ -188,7 +188,7 @@
                 </ul>
                 </p>
             </div>
-            <div class="col-md-5  p-3 p-md-6 text-center">
+            <div class="col-md-3  p-3 p-md-6 d-flex align-items-center justify-content-center">
                 <a href="https://www.wisco.es/">
                     <img src="/img/Wisco.png" class="responsive" alt="WISCO">
                 </a>
@@ -198,7 +198,7 @@
         <hr class="featurette-divider">
 
         <div class="row  p-lg-5">
-            <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+            <div class="col-md-9  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
                 <h3>Quality Management Assistant. <span class="text-muted"> Wisco Española, S.A (2015-2016)
                     </span> </h3>
                 <p class="lead m-3 pb-3  text-start">
@@ -219,7 +219,7 @@
                     were listed and could be easily analyzed.
                 </p>
             </div>
-            <div class="col-md-5  p-3 p-md-6 text-center">
+            <div class="col-md-3  p-3 p-md-6 d-flex align-items-center justify-content-center">
                 <a href="https://www.wisco.es/">
                     <img src="/img/Wisco.png" class="responsive" alt="WISCO">
                 </a>
@@ -229,7 +229,7 @@
         <hr class="featurette-divider">
 
         <div class="row  p-lg-5">
-            <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+            <div class="col-md-9 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
                 <h3>Quality engineer. <span class="text-muted"> ISRINGHAUSEN S.L.U. (2016 - Today)
                     </span> </h3>
                 <p class="lead m-3 pb-3 text-start">
@@ -300,7 +300,7 @@
                     we have deployed our apps in three group facilities.
                 </p>
             </div>
-            <div class="col-md-5  p-3 p-md-6 text-center">
+            <div class="col-md-3  p-3 p-md-6 d-flex align-items-center justify-content-center">
                 <a href="https://www.isri.com/">
                     <img src="/img/isri.png" class="responsive" alt="ISRI">
                 </a>
@@ -339,19 +339,19 @@
             <div class="col-md-4 p-1">
                 <div class="card">
                     <img class="card-img-top" src="/img/fondomega_2.jpg" alt="Card image cap">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h2 class="card-title text-center">Megalitos Navarra</h5>
                             <p class="lead">Web application of the SCN Gorosti developed for the dissemination of the
                                 collected material related to the megalithic sites of Navarra.
                             </p>
-                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-a  ">Discover</a>
+                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-a text-center">Discover</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 p-1">
                 <div class="card">
                     <img class="card-img-top" src="/img/eenavarra.jpg" alt="Megalitos">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h2 class="card-title text-center">Eficiencia energetica Navarra blog</h5>
                             <p class="lead">Information blog on energy efficiency and renewable energies.
                             </p>
@@ -362,11 +362,9 @@
             <div class="col-md-4 p-1">
                 <div class="card">
                     <img class="card-img-top" src="/img/ceviene.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h2 class="card-title text-center">Megalitos Navarra</h5>
-                            <p class="lead">Some quick example text to build on the card title and make up the bulk of
-                                the
-                                card's content.</p>
+                    <div class="card-body text-center">
+                        <h2 class="card-title text-center">Se vienen cositas</h5>
+                            <p class="lead">Future projects are coming up soon.</p>
                             <a href="" class="btn btn-a ">Discover</a>
                     </div>
                 </div>
@@ -404,7 +402,7 @@
                 </h2>
                 <img src="/img/RAC_3622.jpg" alt="Postu2" class="responsive p-4">
                 <p class="lead">Handball player since I was 11 years old. I have been playing in different categories in
-                    <a href="">BMHuarte</a> and <a href="">Anaitasuna</a> teams.
+                    <a href="https://balonmanohuarte.com/">BMHuarte</a> and <a href="https://anaitasuna.com/">Anaitasuna</a> teams.
                 </p>
             </div>
             <div
@@ -413,7 +411,7 @@
                 </h2>
                 <img src="/img/12082017-DSC00304.jpg" alt="Postu2" class="responsive p-4">
                 <p class="lead">Advanced open water diver. Diving all around the globe and in the cantabric sea with <a
-                        href="">Buceo Mistral</a> since 2001. In the last years also with many friends joining this
+                        href="https://www.buceomistral.com/web/">Buceo Mistral</a> since 2001. In the last years also with many friends joining this
                     adventure.</p>
             </div>
         </div>
@@ -453,27 +451,27 @@
                 <a href="https://faroasesoria.com/">
                     <figure><img src="/img/Logo-sin-fondo-300x159.png" alt="Faro"></figure>
                 </a>
-                <span>Energy consultancy founded by my friend Diego Montesino.</span>
+                <span class="lead-2">Energy consultancy founded by my friend Diego Montesino.</span>
             </div>
             <div class="col-md-2 fco text-center text-md-center overflow-hidden position-relative p-3 m-4 hover01">
                 <a href="https://oftal20.com/">
                     <figure> <img src="/img/oftal.jpg" alt="oftal20"></figure>
                 </a>
-                <span>Oftal20 is a question competition for ophthalmology professionals launched by my friend Pablo
+                <span class="lead-2">Oftal20 is a question competition for ophthalmology professionals launched by my friend Pablo
                     Plaza.</span>
             </div>
             <div class="col-md-2 fco text-center text-md-center overflow-hidden position-relative p-3 m-4 hover01">
                 <a href="https://www.amazon.es/Universidad-P%C3%BAblica-Navarra-Nafarroako-Unibertsitate/dp/8497692896">
                     <figure><img src="/img/WhatsApp Image 2021-09-16 at 17.59.20.jpeg" alt="Gon"></figure>
                 </a>
-                <span> Book with relevant information to help identify the species that inhabit the UPNA campus
+                <span class="lead-2"> Book with relevant information to help identify the species that inhabit the UPNA campus
                     whose author is my brother Gonzalo Dean.</span>
             </div>
             <div class="col-md-2 fco text-center text-md-center overflow-hidden position-relative p-3 m-4 hover01">
                 <a href="https://www.cnmindfulness.es/">
                     <figure><img src="/img/WhatsApp Image 2021-09-17 at 21.10.32.jpeg" alt="indra"></figure>
                 </a>
-                <span>The Navarre Center for Mindfulness is a space created with the aim of providing the theory and
+                <span class="lead-2">The Navarre Center for Mindfulness is a space created with the aim of providing the theory and
                     practice of mindfulness and other areas of Psychology.</span>
             </div>
         </div>
@@ -502,14 +500,14 @@
         <div class="container-fluid m-lg-auto p-lg-5">
             <p class="float-right">
                 <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#0161C6"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="#0161C6"
                         class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
                         <path
                             d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
                     </svg>
                 </a>
             </p>
-            <p>&copy; 2021 Guillermo Dean</p>
+            <p class="lead">&copy; 2021 Guillermo Dean</p>
         </div>
 
     </div>
