--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="Automotive parts quality engineer, BI solutions and software developer mangager at ISRINGHAUSEN. BI solutions ">
+    <meta name="title" content="Guillermo Dean">
+    <meta name="url" content="http://guillermodean.com/">
+    <meta name="keywords" content="Engineer, Guillermo, Dean, Software, Developer, BI, Pamplona, Spain">
+    <meta name="author" content="Guillermo Dean">
+
 
 
     <!-- Fonts -->
