updated jquery cdn

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta name="description" content="Automotive parts quality engineer, BI solutions and software developer mangager at ISRINGHAUSEN. BI solutions ">
+    <meta name="description"
+        content="Automotive parts quality engineer, BI solutions and software developer mangager at ISRINGHAUSEN. BI solutions ">
     <meta name="title" content="Guillermo Dean">
     <meta name="url" content="http://guillermodean.com/">
     <meta name="keywords" content="Engineer, Guillermo, Dean, Software, Developer, BI, Pamplona, Spain">
@@ -32,9 +33,8 @@
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
     <link rel="stylesheet" href="/css/main.css">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
@@ -408,7 +408,8 @@
                 </h2>
                 <img src="/img/RAC_3622.jpg" alt="Postu2" class="responsive p-4">
                 <p class="lead">Handball player since I was 11 years old. I have been playing in different categories in
-                    <a href="https://balonmanohuarte.com/">BMHuarte</a> and <a href="https://anaitasuna.com/">Anaitasuna</a> teams.
+                    <a href="https://balonmanohuarte.com/">BMHuarte</a> and <a
+                        href="https://anaitasuna.com/">Anaitasuna</a> teams.
                 </p>
             </div>
             <div
@@ -417,7 +418,8 @@
                 </h2>
                 <img src="/img/12082017-DSC00304.jpg" alt="Postu2" class="responsive p-4">
                 <p class="lead">Advanced open water diver. Diving all around the globe and in the cantabric sea with <a
-                        href="https://www.buceomistral.com/web/">Buceo Mistral</a> since 2001. In the last years also with many friends joining this
+                        href="https://www.buceomistral.com/web/">Buceo Mistral</a> since 2001. In the last years also
+                    with many friends joining this
                     adventure.</p>
             </div>
         </div>
@@ -463,21 +465,24 @@
                 <a href="https://oftal20.com/">
                     <figure> <img src="/img/oftal.jpg" alt="oftal20"></figure>
                 </a>
-                <span class="lead-2">Oftal20 is a question competition for ophthalmology professionals launched by my friend Pablo
+                <span class="lead-2">Oftal20 is a question competition for ophthalmology professionals launched by my
+                    friend Pablo
                     Plaza.</span>
             </div>
             <div class="col-md-2 fco text-center text-md-center overflow-hidden position-relative p-3 m-4 hover01">
                 <a href="https://www.amazon.es/Universidad-P%C3%BAblica-Navarra-Nafarroako-Unibertsitate/dp/8497692896">
                     <figure><img src="/img/WhatsApp Image 2021-09-16 at 17.59.20.jpeg" alt="Gon"></figure>
                 </a>
-                <span class="lead-2"> Book with relevant information to help identify the species that inhabit the UPNA campus
+                <span class="lead-2"> Book with relevant information to help identify the species that inhabit the UPNA
+                    campus
                     whose author is my brother Gonzalo Dean.</span>
             </div>
             <div class="col-md-2 fco text-center text-md-center overflow-hidden position-relative p-3 m-4 hover01">
                 <a href="https://www.cnmindfulness.es/">
                     <figure><img src="/img/WhatsApp Image 2021-09-17 at 21.10.32.jpeg" alt="indra"></figure>
                 </a>
-                <span class="lead-2">The Navarre Center for Mindfulness is a space created with the aim of providing the theory and
+                <span class="lead-2">The Navarre Center for Mindfulness is a space created with the aim of providing the
+                    theory and
                     practice of mindfulness and other areas of Psychology.</span>
             </div>
         </div>
