--- a/src/views/BFM.ejs
+++ b/src/views/BFM.ejs
@@ -65,8 +65,6 @@
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico" />
     <link rel="stylesheet" href="/css/main.css" />
 
-    <!-- scripts  -->
-
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -82,7 +80,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    
+
     <title>GDWEB</title>
   </head>
 
@@ -91,8 +89,9 @@
       <!-- include partials -->
       <%- include('partials/header.ejs') %>
 
-      <!-- include main -->
-      <%- include('main.ejs') %>
+      <!-- include extras -->
+      <%- include('extras.ejs') %>
+      
     </div>
   </body>
   <footer>
