--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -1,4 +1,3 @@
-
 <div class="position-relative overflow-hidden text-center front">
 
     <div class="col-md-5 p-lg-5 mx-auto my-5" style="height: 800px;;width: 100%;">
@@ -17,8 +16,8 @@
                 class="bi bi-tools icon-blue" viewBox="0 0 16 16">
                 <path
                     d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.356 3.356a1 1 0 0 0 1.414 0l1.586-1.586a1 1 0 0 0 0-1.414l-3.356-3.356a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0zm9.646 10.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708zM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11z" />
-            </svg> Work experiences <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
-                fill="currentColor" class="bi bi-tools icon-blue" viewBox="0 0 16 16">
+            </svg> Work experiences <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
+                class="bi bi-tools icon-blue" viewBox="0 0 16 16">
                 <path
                     d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.356 3.356a1 1 0 0 0 1.414 0l1.586-1.586a1 1 0 0 0 0-1.414l-3.356-3.356a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0zm9.646 10.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708zM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11z" />
             </svg>
@@ -152,7 +151,7 @@
 
 <div class="row  p-lg-5">
     <div class="col-md-9 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
-        <h3>Quality engineer. <span class="text-muted"> ISRINGHAUSEN S.L.U. (2016 - Today)
+        <h3>Quality engineer. <span class="text-muted"> ISRINGHAUSEN S.L.U. (2016 - 2022)
             </span> </h3>
         <p class="lead m-3 pb-3 text-start">
             Landing a job at ISRI was an unespected opportunity. The team I had the privilege of helping was
@@ -225,6 +224,47 @@
     <div class="col-md-3  p-3 p-md-6 d-flex align-items-center justify-content-center">
         <a href="https://www.isri.com/">
             <img src="/img/isri.png" class="responsive" alt="ISRI">
+        </a>
+    </div>
+</div>
+
+<hr class="featurette-divider">
+
+<div class="row  p-lg-5">
+    <div class="col-md-9 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+        <h3>PM change management <span class="text-muted"> Nordex Acciona Windpower (2022 - Today)
+            </span> </h3>
+        <p class="lead m-3 pb-3 text-start">
+            New project, new challenges.
+            <br>
+            I am currently working as a change management engineer for the PM department at Nordex Acciona.
+            <br>
+            <br>
+            My main responsabilities are:
+            Coordination of the global change committee ensuring the best implementation plan.
+            <br>
+            Coordination of changes in a multi-plant environment and also for PM/EPC changes.
+            <br>
+            Communicate and ensure that the change notes reported from each global function are transferred and
+            implemented by the PBOM configuration area in PLM.
+            <br>
+            Ensure that the change notes are correctly implemented in the PBOM configuration area.
+            <br>
+
+            Lead the implementation project in the different productive areas and participate in the change management
+            committees.
+            <br>
+            <br>
+            I am looking forward to learn and grow with this new opportunity.
+
+        </p>
+
+        <br>
+        <br>
+    </div>
+    <div class="col-md-3  p-3 p-md-6 d-flex align-items-center justify-content-center">
+        <a href="https://www.nordex-online.com/">
+            <img src="/img/NXAW.jpg" class="responsive" alt="ISRI">
         </a>
     </div>
 </div>
@@ -318,18 +358,16 @@
 <hr class="featurette-divider ">
 
 <div class="row justify-content-center flex-row p-lg-5">
-    <div
-        class="col-md-5 feature  text-center text-md-center overflow-hidden position-relative p-3 m-4 box-shadow">
+    <div class="col-md-5 feature  text-center text-md-center overflow-hidden position-relative p-3 m-4 box-shadow">
         <h2 class="featurette-heading m-2">Handball
         </h2>
         <img src="/img/RAC_3622.jpg" alt="Postu2" class="responsive p-4">
         <p class="lead">Handball player since I was 11 years old. I have been playing in different categories in
-            <a href="https://balonmanohuarte.com/">BMHuarte</a> and <a
-                href="https://anaitasuna.com/">Anaitasuna</a> teams.
+            <a href="https://balonmanohuarte.com/">BMHuarte</a> and <a href="https://anaitasuna.com/">Anaitasuna</a>
+            teams.
         </p>
     </div>
-    <div
-        class="col-md-5 feature  text-center text-md-center overflow-hidden position-relative p-3 m-4 box-shadow">
+    <div class="col-md-5 feature  text-center text-md-center overflow-hidden position-relative p-3 m-4 box-shadow">
         <h2 class="featurette-heading m-2">Scuba diving
         </h2>
         <img src="/img/12082017-DSC00304.jpg" alt="Postu2" class="responsive p-4">
@@ -406,8 +444,7 @@
 
 
 <div class="row p-lg-5">
-    <div
-        class="col-md-7 text-center text-md-center overflow-hidden position-relative overflow-hidden  p-3 p-md-6">
+    <div class="col-md-7 text-center text-md-center overflow-hidden position-relative overflow-hidden  p-3 p-md-6">
         <h2 class="featurette-heading">Social Media. <span class="text-muted">It’ll not blow your
                 mind.</span></h2>
         <p class="lead">Some great accounts where you can find me not beeing professional, except for Linkedin.
