--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -306,7 +306,7 @@
                     <p class="lead">Web application of the SCN Gorosti developed for the dissemination of the
                         collected material related to the megalithic sites of Navarra.
                     </p>
-                    <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-a text-center">Discover</a>
+                    <a href="https://megalitos-production.up.railway.app/" class="btn btn-a text-center">Discover</a>
             </div>
         </div>
     </div>
