--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,6 +16,7 @@
       name="keywords"
       content="Engineer, Guillermo, Dean, Software, Developer, BI, Pamplona, Spain"
     />
+    <meta property="og:image" content="https://guillermodean.com/img/12082017-DSC00304.jpg" />
     <meta name="author" content="Guillermo Dean" />
 
     <!-- Fonts -->
@@ -100,3 +101,8 @@
     <%- include('partials/footer.ejs') %>
   </footer>
 </html>
+<script>
+  var year = new Date().getFullYear();
+  document.getElementById("currentYear").innerHTML = year;
+</script>
+
