--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -1,10 +1,11 @@
 <div class="position-relative overflow-hidden text-center front">
 
     <div class="col-md-5 p-lg-5 mx-auto my-5" style="height: 800px;;width: 100%;">
-        <div class="box mx-auto" style="height: 200px;;width: 100%;">
-            <h1 class="display-2 fw-normal">Guillermo Dean</h1>
-            <p class="lead"><em>- Pura vida -</em></p>
-        </div>
+        <!-- <div class="box mx-auto" style="height: 200px;;width: 100%;"> -->
+            <!-- <h1 class="display-2 fw-normal">Guillermo Dean</h1>
+            <p class="lead"><em>- Pura vida -</em></p> -->
+            <img src="/img/Guillermo__2_-removebg-preview.png" alt="logo" style="height:700px;width: auto;">
+        <!-- </div> -->
     </div>
 </div>
 
@@ -327,7 +328,7 @@
             <div class="card-body text-center">
                 <h2 class="card-title text-center">Se vienen cositas</h5>
                     <p class="lead">Future projects are coming up soon.</p>
-                    <a href="" class="btn btn-a ">Discover</a>
+                    <a href="https://github.com/guillermodean/ZH_Frontend" class="btn btn-a ">Discover</a>
             </div>
         </div>
     </div>
