--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -8,5 +8,6 @@
             </svg>
         </a>
     </p>
-    <p class="lead">&copy; 2021 Guillermo Dean</p>
+    <p class="lead">&copy; <span id="currentYear"></span> Guillermo Dean</p>
 </div>
+
