--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -4,7 +4,7 @@
         <!-- <div class="box mx-auto" style="height: 200px;;width: 100%;"> -->
             <!-- <h1 class="display-2 fw-normal">Guillermo Dean</h1>
             <p class="lead"><em>- Pura vida -</em></p> -->
-            <img src="/img/Guillermo__2_-removebg-preview.png" alt="logo" style="height:700px;width: auto;">
+            <img class="logo" src="/img/Guillermo__2_-removebg-preview.png" alt="logo" style="height:700px;width: auto;">
         <!-- </div> -->
     </div>
 </div>
