--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -10,6 +10,7 @@ body,html {
     left:0px;
     right:0px;
     width: 100%;
+    scroll-behavior: smooth;
     /* overflow-y: hidden;  */
 }
 
@@ -49,6 +50,11 @@ overflow: hidden;
 }
 .header a{
   color: whitesmoke;
+}
+
+.logo{
+max-width: 100%;
+height: auto;
 }
 
 .navbar-toggler {
@@ -186,8 +192,12 @@ ul {
   color: #e0ca3c;
 }
 .float-right{
-  float: right;
   color: #0161C6;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 20px;
+
 
 }
 /* --------------------Buttons------------------------- */
